# prepare-annotations

./: .env.template  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/prepare_annotations/: __init__.py  cli.py  config.py  io.py  models.py  runtime.py
src/prepare_annotations/preparation/: __init__.py  dataset_card_generator.py  huggingface_uploader.py  runners.py  vcf_downloader.py  vcf_parquet_splitter.py  vortex.py
src/prepare_annotations/vortex/: convert_vortex.py  parquet_to_vortex.py
tests/: conftest.py  test_basic.py  test_parquet_to_vortex.py  test_read_vcf_save_vortex.py  test_vcf_pipeline_integration.py
